unpackaged/post_comexi/objects/Account/fields/COMEXI_Country_Risk__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Country_Risk__c</fullName>
    <description>Riesgo asignado al país del cliente. Alimenta el uplift de riesgo del escandallo, que hoy se aplica a mano en la hoja de cálculo.</description>
    <label>Riesgo de país</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>