unpackaged/post_comexi/objects/Account/fields/COMEXI_Down_Payment_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Pct__c</fullName>
    <description>Porcentaje de pago anticipado exigido a este cliente. Es el hito que hoy vive en correos a Finanzas y que bloquea el arranque de ingeniería hasta confirmar el cobro.</description>
    <label>Pago anticipado %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>