unpackaged/post_comexi/objects/Account/fields/COMEXI_Has_Representative__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Has_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si el país del cliente opera con representante local. Activa el paso de comisión (8%) del pricing procedure de retrofit.</description>
    <label>Has Representative</label>
    <type>Checkbox</type>
</CustomField>