unpackaged/post_comexi/objects/Account/fields/COMEXI_Installed_Base_Value__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Installed_Base_Value__c</fullName>
    <description>Valor de reposición estimado del parque instalado en el cliente. Da contexto de tamaño de cuenta al vendedor de servicio antes de cotizar un retrofit.</description>
    <label>Valor de la base instalada</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>