unpackaged/post_comexi/objects/Account/fields/COMEXI_Last_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Last_Intervention_Date__c</fullName>
    <description>Fecha de la última intervención de un técnico Comexi en las instalaciones del cliente. Da contexto de relación de servicio antes de planificar el viaje del retrofit.</description>
    <label>Última intervención</label>
    <type>Date</type>
</CustomField>