unpackaged/post_comexi/objects/Account/fields/COMEXI_Machine_Park_Size__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Park_Size__c</fullName>
    <description>Número de máquinas Comexi instaladas en el cliente. Dimensiona el potencial de retrofit de la cuenta y es el criterio con el que el agente prioriza el preestudio masivo de la base instalada.</description>
    <label>Parque de máquinas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>