unpackaged/post_comexi/objects/Account/fields/COMEXI_Offer_Language__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Offer_Language__c</fullName>
    <description>Idioma en el que se genera la oferta y el contrato para este cliente. Sustituye la elección manual de idioma del menú del Launcher, que hoy obliga a mantener siete plantillas de Google Docs en paralelo.</description>
    <label>Idioma de la oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Català</fullName>
            </value>
            <value>
                <fullName>Castellano</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Deutsch</fullName>
            </value>
            <value>
                <fullName>Italiano</fullName>
            </value>
            <value>
                <fullName>Português</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>