unpackaged/post_comexi/objects/Account/fields/COMEXI_Payment_Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Payment_Terms_Days__c</fullName>
    <description>Días de pago acordados con el cliente. Determina la fecha de vencimiento de las facturas del pedido de retrofit.</description>
    <label>Condiciones de pago (días)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>