unpackaged/post_comexi/objects/Account/fields/COMEXI_RALF_Applicable__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_RALF_Applicable__c</fullName>
    <description>Indica si al cliente se le aplica el uplift RALF (3,00%) sobre el precio de venta del retrofit.</description>
    <defaultValue>false</defaultValue>
    <label>RALF aplicable</label>
    <type>Checkbox</type>
</CustomField>