unpackaged/post_comexi/objects/Account/fields/COMEXI_Representative_Commission_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Representative_Commission_Pct__c</fullName>
    <description>Porcentaje de comisión del representante local (por defecto 8%). Solo aplica si Has Representative = true.</description>
    <label>Representative Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>