unpackaged/post_comexi/objects/Account/fields/COMEXI_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Representative_Name__c</fullName>
    <description>Representante local que atiende la cuenta. Es quien cobra la comisión que el escandallo añade al precio de venta.</description>
    <label>Representante local</label>
    <length>80</length>
    <type>Text</type>
</CustomField>