unpackaged/post_comexi/objects/Account/fields/COMEXI_SAP_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_SAP_Customer_Code__c</fullName>
    <description>Código de cliente en SAP. Es la clave con la que la descomposición DRO envía el material del pedido a SAP, y evita la doble entrada manual que hoy hace operaciones.</description>
    <externalId>true</externalId>
    <label>SAP Customer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>