unpackaged/post_comexi/objects/Account/fields/COMEXI_Service_Contract_End__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Service_Contract_End__c</fullName>
    <description>Fecha de fin del contrato de servicio vigente. Permite anticipar la renovación y agrupar el retrofit con ella en la misma conversación comercial.</description>
    <label>Fin del contrato de servicio</label>
    <type>Date</type>
</CustomField>