unpackaged/post_comexi/objects/Account/fields/COMEXI_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Service_Level__c</fullName>
    <description>Nivel del contrato de servicio del cliente. Los packs gold/silver existen en el negocio pero hoy no están catalogados (gap del discovery); tenerlos aquí permite condicionar tiempos de respuesta y precios de intervención.</description>
    <label>Nivel de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Sin contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>