unpackaged/post_comexi/objects/Account/fields/COMEXI_Technical_Site_Notes__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Technical_Site_Notes__c</fullName>
    <description>Particularidades técnicas y logísticas de la planta del cliente que condicionan una intervención: accesos, turnos, paradas de producción, requisitos de seguridad.</description>
    <label>Notas técnicas de la planta</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>