unpackaged/post_comexi/objects/Account/fields/COMEXI_Warranty_Uplift_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Warranty_Uplift_Pct__c</fullName>
    <description>Uplift de garantía aplicado a los retrofits de este cliente (2,60% en el caso de referencia). La garantía arranca desde la aceptación y dura 6 meses.</description>
    <label>Uplift de garantía %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>